# password-vault

./: README.md  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  app.db  app.db-shm  app.db-wal  password_vault.db  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/models/: db.rs
