[package]
name = "my-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
resolver = "2"            # <- add this to avoid feature leakage

[lib]
name = "my_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tokio = { version = "1.39", features = ["macros", "rt-multi-thread"] }
tauri = { version = "2", features = [] }

# БД
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }

# Криптография
argon2 = "0.5"
rand = "0.9.1"
chacha20poly1305 = { version = "0.10", features = ["std"] }
zeroize = "1"
secrecy = "0.8"

# Утилиты/сериализация/ошибки
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.16"
time = { version = "0.3", features = ["macros"] }

# Для тестов
tempfile = "3"
anyhow = "1"
getrandom = "0.2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"